[package]
name = "libp2p-pinecone"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.1"
futures-timer = "3.0.2"
instant = "0.1.11"
libp2p-core = { path = "../../core", default-features = false }
libp2p-swarm = { path = "../../swarm" }
log = "0.4.1"
rand = "0.7.2"
void = "1.0"
asynchronous-codec = "0.6.0"
bytes = "1.1.0"

#[dev-dependencies]
tokio = {version = "1", features = ["full"]}
async-std = "1.6.2"
libp2p-tcp = { path = "../../transports/tcp", features = [ "tokio" ] }
libp2p-noise = { path = "../../transports/noise" }
libp2p-yamux = { path = "../../muxers/yamux" }
libp2p-mplex = { path = "../../muxers/mplex" }
env_logger = "0.9.0"
quickcheck = "0.9.0"